@@ -1,0 +1,50 @@
+library(OpenMx)
+
+data(demoOneFactor)
+
+manifests <- names(demoOneFactor)
+latents <- c("factor")
+nVar <- length(manifests)
+nFac <- length(latents)
+
+factorModel <- mxModel("One Factor ML",
+    mxData(cov(demoOneFactor), type="cov", numObs=500),
+    mxMatrix("Full", 1, nVar, free=T, values=mean(demoOneFactor), name="M"),
+    mxMatrix("Full", nVar, nFac, free=T, values=.2, name="A"),
+    mxMatrix("Diag", nVar, nVar, free=T, values=1, lbound=.0001, name="D"),
+    mxAlgebra(A%*%t(A) + D, name="C"),
+    mxAlgebra(sqrt(diag2vec(C)),name="P"),
+    mxMLObjective("C", "M", dimnames=manifests))
+
+omxCheckError(mxRun(factorModel), 
+	paste("In model 'One Factor ML' the ML objective function",
+		"contains an expected means vector but the model is missing",
+		"some data for the observed means."))
+
+factorModel <- mxModel("One Factor ML",
+    mxData(cov(demoOneFactor), means = mean(demoOneFactor), type="cov", numObs=500),
+    mxMatrix("Full", nVar, 1, free=T, values=mean(demoOneFactor), name="M"),
+    mxMatrix("Full", nVar, nFac, free=T, values=.2, name="A"),
+    mxMatrix("Diag", nVar, nVar, free=T, values=1, lbound=.0001, name="D"),
+    mxAlgebra(A%*%t(A) + D, name="C"),
+    mxAlgebra(sqrt(diag2vec(C)),name="P"),
+    mxMLObjective("C", "M", dimnames=manifests))
+
+omxCheckError(mxRun(factorModel),
+	paste("The expected means vector associated with",
+		"the ML objective in model 'One Factor ML'",
+		"is not a 1 x n matrix."))
+
+factorModel <- mxModel("One Factor FIML",
+    mxData(demoOneFactor, type="raw"),
+    mxMatrix("Full", nVar, 1, free=T, values=mean(demoOneFactor), name="M"),
+    mxMatrix("Full", nVar, nFac, free=T, values=.2, name="A"),
+    mxMatrix("Diag", nVar, nVar, free=T, values=1, lbound=.0001, name="D"),
+    mxAlgebra(A%*%t(A) + D, name="C"),
+    mxAlgebra(sqrt(diag2vec(C)),name="P"),
+    mxFIMLObjective("C", "M", dimnames=manifests))
+
+omxCheckError(mxRun(factorModel),
+	paste("The expected means vector associated with",
+		"the FIML objective in model 'One Factor FIML'",
+		"is not a 1 x n matrix."))
